--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
   ],
   "dependencies": {},
   "peerDependencies": {
-    "discord.js": "^11.4.0",
-    "sqlite": "^2.9.1",
-    "sequelize": "^4.31.2"
+    "discord.js": "^11.4.0"
   },
   "devDependencies": {
     "@types/node": "^8.5.9",
